[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<4"]

[tool.flit.metadata]
author = "Platysma"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires-python=">=3.5"
home-page = "https://github.com/Platysma/vienna-smartmeter"
module = "smartmeter"
dist-name = "vienna-smartmeter"
requires = [
    "requests >=2.24.0,<3.0.0",
    "lxml >=4.6.3,<5.0.0"
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest ==5.4.3",
    "pytest-cov ==2.10.0",
    "pytest-asyncio >=0.14.0,<0.15.0",
    "mypy ==0.812",
    "flake8 >=3.8.3,<4.0.0",
    "black ==20.8b1",
    "lxml-stubs"
]

[tool.flit.sdist]
include = ["README.md"]