[tool.poetry]
name = "vienna-smartmeter"
packages = [
    { include = "smartmeter", from = "src" },
]
version = "0.2.0"
description = "Python library to access the Wiener Netze Smart Meter private API."
authors = ["Platysma <platysma.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/platysma/vienna-smartmeter"
repository = "https://github.com/platysma/vienna-smartmeter"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.urls]
Changelog = "https://github.com/platysma/vienna-smartmeter/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.24.0"
lxml = "^4.6.3"
aiohttp = { version = "^3.7.4", optional = true }
async_timeout = { version = "^3.0.1", optional = true }
importlib-metadata = "^4.6.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
Pygments = "^2.10.0"
lxml-stubs = "^0.2.0"

[tool.poetry.extras]
async = ["aiohttp", "async_timeout"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["smartmeter"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
